system: When press back on audio detailed view, focus headphone button.

By default the back button will tell focus to go on the tray associated
with the detail view. This is usually the view that activated the
detail view, except in the case of the volume view whos child headphone
button activates the detail view.

Add functionality for a tray item to choose which item to restore focus
too. The default will be the tray item itself. The first and only
user will be the volume tray.

Test: manual
Bug: 803013
Change-Id: If053cd6f152679b79a98b85570a3cf3f97ed5e8f
Reviewed-on: https://chromium-review.googlesource.com/1038884
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555460}
Former-commit-id: a071f1771aec616e6038635f71ebf80db2d9c319